--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Saral Vigyan</string>
+    <string name="new_member_sign_up_here">New member? sign up here</string>
+    <string name="forgot_password">Forgot Password?</string>
+
 </resources>
